--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <h1>Whispers of Motherhood 🤱💙</h1>
-      <p class="subtitle">AI-Powered Healing & Support for New Mothers</p>
+      <p class="subtitle">Empowering Mothers, Understanding Emotions</p>
 
       <!-- Sentiment Analysis Section -->
       <section class="sentiment-section">
